# wickerGen

./: .gitignore  README.md  graph.py  knot.py  knot3bundles  knot_types.py  main.py  pyproject.toml  read_obj.py  requirements.txt  setuptest.py  testing.py  util_classes.py  utils.py  visualize.py  weaving.py
braidGenerator/: graph.py  knot.py  util_classes.py  utils.py  visualize.py  weaving.py
modelBuilder/: models.py
tests/: tests.py
wickergen/braidGenerator/: graph.py  knot.py  util_classes.py  utils.py  visualize.py  weaving.py
wickergen/modelBuilder/: models.py
